--- a/HtmlAuthPages/WillPassAuth.html
+++ b/HtmlAuthPages/WillPassAuth.html
@@ -9,6 +9,7 @@
     <noscript>asdf098asdfa7980asfd</noscript>
     <noscript>afda968c9729a3d83f04df85eeb12237067db595f2f584f7e2eb027e82224dd0</noscript> <!-- for instance this is the hash for th word 'hehe911' -->
     <noscript>0-98adfsdfasdf</noscript>
+    <noscript>9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08</noscript>
 </head>
 <body>
     <h1>Authentication test</h1>
